style(datatable): fix collapse padding

--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -33,16 +33,23 @@
     grid-area: footer;
 }
 
-
-
 /*
 * Navigation
 */
 .sidebar .active {
-    background-color: #136F9A !important;
+    background-color: #136f9a !important;
     color: #fff !important;
 }
 
-.sidebar .nav-link:hover{
-    color: #2C3E50!important;
+.sidebar .nav-link:hover {
+    color: #2c3e50 !important;
+}
+
+/*
+* Custom Datatable
+*/
+div.dt-container select.dt-input {
+    padding-left: 7px !important;
+    padding-right: 22px !important;
+    margin-right: 5px;
 }
